// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`createTemplate: self closing - html 1`] = `
{
  "content": "<input type="text"/>",
  "stylesheets":   Set {},
}
`;

exports[`createTemplate: self closing - svg 1`] = `
{
  "content": "<polygon points="0,100 50,25 50,75 100,0"/>",
  "stylesheets":   Set {},
}
`;

exports[`createTemplate: falsey - undefined 1`] = `
{
  "content": "<div></div>",
  "stylesheets":   Set {},
}
`;

exports[`createTemplate: falsey - null 1`] = `
{
  "content": "<div></div>",
  "stylesheets":   Set {},
}
`;

exports[`createTemplate: falsey - false 1`] = `
{
  "content": "<div></div>",
  "stylesheets":   Set {},
}
`;

exports[`createTemplate: falsey - "" 1`] = `
{
  "content": "<div></div>",
  "stylesheets":   Set {},
}
`;

exports[`createTemplate: falsey - 0 1`] = `
{
  "content": "<div></div>",
  "stylesheets":   Set {},
}
`;

exports[`createTemplate: falsey - NaN 1`] = `
{
  "content": "<div></div>",
  "stylesheets":   Set {},
}
`;

exports[`createTemplate: conditional 1`] = `
{
  "content": "<div>hello</div>",
  "stylesheets":   Set {},
}
`;

exports[`createTemplate: style attribute 1`] = `
{
  "content": "<div style="background-color:blue; margin:12px;">styles</div>",
  "stylesheets":   Set {},
}
`;

exports[`createTemplate: data-trigger attribute 1`] = `
{
  "content": "<div data-trigger="click->random focus->thing">triggers</div>",
  "stylesheets":   Set {},
}
`;

exports[`createTemplate: array of PlaitedElements 1`] = `
{
  "content": "<div><li>0</li><li>1</li><li>2</li><li>3</li><li>4</li><li>5</li><li>6</li><li>7</li><li>8</li><li>9</li></div>",
  "stylesheets":   Set {},
}
`;

exports[`createTemplate: should not throw on script tag with trusted attribute 1`] = `
{
  "content": "<script type="module" src="main.js"></script>",
  "stylesheets":   Set {},
}
`;

exports[`createTemplate: escapes children 1`] = `
{
  "content": 
"<div>&lt;script type=&quot;text/javascript&quot;&gt;
const hostRegex = /^https?://([^/]+)/.*$/i;
const host = document.URL.replace(hostRegex, &#39;$1&#39;);
const socket = new WebSocket(/);
const reload = () =&gt;{
  location.reload();
  console.log(&#39;...reloading&#39;);
};
socket.addEventListener(&#39;message&#39;, reload);
console.log(&#39;[plaited] listening for file changes&#39;);
&lt;/script&gt;</div>"
,
  "stylesheets":   Set {},
}
`;

exports[`createTemplate: does not escape children when trusted 1`] = `
{
  "content": 
"<div><script type="text/javascript">
const hostRegex = /^https?://([^/]+)/.*$/i;
const host = document.URL.replace(hostRegex, '$1');
const socket = new WebSocket(/);
const reload = () =>{
  location.reload();
  console.log('...reloading');
};
socket.addEventListener('message', reload);
console.log('[plaited] listening for file changes');
</script></div>"
,
  "stylesheets":   Set {},
}
`;

exports[`createTemplate: with slotted PlaitedElements 1`] = `
{
  "content": "<c-el><template shadowrootmode="open" shadowrootdelegatesfocus="true"><slot name="slot"></slot></template><li slot="slot">slot-0</li><li slot="slot">slot-1</li><li slot="slot">slot-2</li><li slot="slot">slot-3</li><li slot="slot">slot-4</li><li slot="slot">slot-5</li><li slot="slot">slot-6</li><li slot="slot">slot-7</li><li slot="slot">slot-8</li><li slot="slot">slot-9</li></c-el>",
  "stylesheets":   Set {},
}
`;

exports[`createTemplate: Fragment PlaitedElements 1`] = `
{
  "content": "<li>item-0</li><li>item-1</li><li>item-2</li><li>item-3</li><li>item-4</li><li>item-5</li><li>item-6</li><li>item-7</li><li>item-8</li><li>item-9</li>",
  "stylesheets":   Set {},
}
`;

exports[`createTemplate: custom element with child hoisting its styles 1`] = `
{
  "content": "<nested-component><template shadowrootmode="open" shadowrootdelegatesfocus="true"><style>.nested-label_LTU0Mz { font-weight: bold; }</style><span class="nested-label_LTU0Mz">inside nested template</span><slot name="nested"></slot></template></nested-component>",
  "stylesheets":   Set {},
}
`;

exports[`createTemplate: custom element with child and host styles 1`] = `
{
  "content": "<nested-component><template shadowrootmode="open" shadowrootdelegatesfocus="true"><style>host: { display: flex; flex-direction: column; }.nested-label_LTU0Mz { font-weight: bold; }</style><span class="nested-label_LTU0Mz">inside nested template</span><slot name="nested"></slot></template></nested-component>",
  "stylesheets":   Set {},
}
`;

exports[`createTemplate: custom element with styled slotted component 1`] = `
{
  "content": "<nested-component><template shadowrootmode="open" shadowrootdelegatesfocus="true"><style>.nested-label_LTU0Mz { font-weight: bold; }</style><span class="nested-label_LTU0Mz">inside nested template</span><slot name="nested"></slot></template><p class="slotted-paragraph_LTc5ND" slot="nested">slotted paragraph</p></nested-component>",
  "stylesheets":   
Set {
    ".slotted-paragraph_LTc5ND { color: rebeccapurple; }",
  }
,
}
`;

exports[`createTemplate: custom element with styles nested in custom element 1`] = `
{
  "content": "<top-component><template shadowrootmode="open" shadowrootdelegatesfocus="true"><style>.slotted-paragraph_LTc5ND { color: rebeccapurple; }</style><nested-component><template shadowrootmode="open" shadowrootdelegatesfocus="true"><style>.nested-label_LTU0Mz { font-weight: bold; }</style><span class="nested-label_LTU0Mz">inside nested template</span><slot name="nested"></slot></template><p class="slotted-paragraph_LTc5ND" slot="nested">slotted paragraph</p></nested-component></template></top-component>",
  "stylesheets":   Set {},
}
`;

exports[`createTemplate: custom element with styles nested in custom element with styles 1`] = `
{
  "content": "<top-component><template shadowrootmode="open" shadowrootdelegatesfocus="true"><style>:host { display: block; }.slotted-paragraph_LTc5ND { color: rebeccapurple; }</style><nested-component><template shadowrootmode="open" shadowrootdelegatesfocus="true"><style>.nested-label_LTU0Mz { font-weight: bold; }</style><span class="nested-label_LTU0Mz">inside nested template</span><slot name="nested"></slot></template><p class="slotted-paragraph_LTc5ND" slot="nested">slotted paragraph</p></nested-component></template></top-component>",
  "stylesheets":   Set {},
}
`;

exports[`createTemplate: custom element with nested custom element and styled slotted element 1`] = `
{
  "content": "<top-component><template shadowrootmode="open" shadowrootdelegatesfocus="true"><style>:host { display: block; }.slotted-paragraph_LTc5ND { color: rebeccapurple; }</style><nested-component><template shadowrootmode="open" shadowrootdelegatesfocus="true"><style>.nested-label_LTU0Mz { font-weight: bold; }</style><span class="nested-label_LTU0Mz">inside nested template</span><slot name="nested"></slot></template><p class="slotted-paragraph_LTc5ND" slot="nested">slotted paragraph</p></nested-component></template><img class="image_Mjc4MD"/></top-component>",
  "stylesheets":   
Set {
    ".image_Mjc4MD { width: 100%; aspect-ratio: 16 / 9; }",
  }
,
}
`;

exports[`createTemplate: properly hoist and deduplicates multiple stylesheets on a single node 1`] = `
{
  "content": "<div></div>",
  "stylesheets":   
Set {
    ".a_NTA5Nj { width: 100%; }",
    ".a_LTIzMT { color: blue; }",
  }
,
}
`;
